<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tpv</string>
    <string name="action_settings">Settings</string>
    
    <!-- Números Calculadora-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ok">OK</string>
    

   
	<!-- Login-->
    <string name="sms_incorrect">¡Ups!...\n El código que has \n introducido \n es erróneo.</string>
    <!-- Plans-->
    <string name="reserve">Reservas</string>
    <string name="new_service">Nuevo Servicio</string>
    <string name="options">Opciones</string>
    
</resources>
