<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".LoginActivity" >

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
	    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:paddingTop="350dp"  >
	
	         <RelativeLayout
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content" >
	
	              <EditText
	                android:id="@+id/cajaTextLogin"
	        		android:layout_width="200dp"
	        		android:layout_height="100dp"
	        		android:gravity="center"
	       			android:background="@drawable/teclado_login"
	       			android:ems="10"
	       			android:textColor="#000066"
	       			android:maxLength="10"
	       			android:layout_marginLeft="350dp"
	        		android:focusable="false"
	        		android:hint="" >
	             </EditText>
	           
	            
	             <LinearLayout
			     android:layout_width="200dp"
			     android:layout_height="210dp"
			     android:orientation="vertical"
			     android:layout_toRightOf="@+id/cajaTextLogin"
			     android:background="@drawable/background_calc"
			     android:layout_marginLeft="75dp"
			     android:paddingTop="10dp"
			     android:paddingBottom="0dp">
	             
			            <LinearLayout
			                android:layout_width="fill_parent"
			                android:layout_height="wrap_content"
			                android:layout_gravity="center"
			                android:gravity="center"
			                android:orientation="horizontal">
			               
							<Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/one"
					        android:text="@string/one"
					        android:textColor="#000066"/>
						   
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/two"
					        android:text="@string/two" 
					        android:textColor="#000066"/>
						    
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/three"
					        android:text="@string/three" 
					        android:textColor="#000066"/>
						    
					   </LinearLayout>
		
					   <LinearLayout
					       android:layout_width="fill_parent"
					       android:layout_height="wrap_content"
					       android:layout_gravity="center"
					       android:gravity="center"
					       android:orientation="horizontal"
					       android:paddingTop="0dp" >
		
						   <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/four"
					        android:text="@string/four" 
					        android:textColor="#000066"/>
						   
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/five"
					        android:text="@string/five" 
					        android:textColor="#000066"/>
						    
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/six"
					        android:text="@string/six" 
					        android:textColor="#000066"/>
						    
					   </LinearLayout>
					   
					   <LinearLayout
					       android:layout_width="fill_parent"
					       android:layout_height="wrap_content"
					       android:layout_gravity="center"
					       android:gravity="center"
					       android:orientation="horizontal"
					       android:paddingTop="0dp" >
		
						   <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/seven"
					        android:text="@string/seven" 
					        android:textColor="#000066"/>
						   
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/eight"
					        android:text="@string/eight" 
					        android:textColor="#000066"/>
						    
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/nine"
					        android:text="@string/nine"
					        android:textColor="#000066"/>
						    
					   </LinearLayout>
					   
					   <LinearLayout
					       android:layout_width="fill_parent"
					       android:layout_height="wrap_content"
					       android:layout_gravity="center"
					       android:gravity="center"
					       android:orientation="horizontal"
					       android:paddingTop="0dp" >
		
						   <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/ok"
					        android:text="@string/ok"
						    android:textColor="#A80000"/>
						   
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/zero"
					        android:text="@string/zero"
					        android:textColor="#000066"/>
						    
						    <Button
					        android:layout_width="60dp"
					        android:layout_height="wrap_content"
					        android:id = "@+id/delete"
					        android:text="@string/sup"/>
						    
					   </LinearLayout>
					   
				 </LinearLayout>	   
			   
			 </RelativeLayout>
			        
		</LinearLayout>
	
    </LinearLayout>

</RelativeLayout>
